tests/data/placebo/test_elasticsearch_modify_security_groups/es.ListDomainNames_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {},
    "DomainNames": [
      {
        "DomainName": "manual"
      },
      {
        "DomainName": "c7n-sg-test"
      }
    ]
  }
}
