tests/data/placebo/test_elasticsearch_modify_security_groups/es.ListTags_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "dae46b7f-fbb3-11e7-85d7-e3b87a97d97f", 
            "HTTPHeaders": {
                "x-amzn-requestid": "dae46b7f-fbb3-11e7-85d7-e3b87a97d97f", 
                "date": "Wed, 17 Jan 2018 18:25:54 GMT", 
                "content-length": "14", 
                "content-type": "application/json"
            }
        }, 
        "TagList": []
    }
}
